--- a/support/static/ngTemplates/app.reviews.html
+++ b/support/static/ngTemplates/app.reviews.html
@@ -62,7 +62,7 @@
 
           </table>
 
-          <div ng-if="reviewData.length" style="position:fixed;bottom:0px;padding: 2rem;background:#fff" >
+          <div ng-if="reviewData.length" style="position:fixed;bottom:0px;padding: 2rem 3rem;background:#fff" >
             <span>
               <select ng-model="pageOptionsSelected.value" ng-change="setItemsPerPage(pageOptionsSelected.value)">
                 <option ng-repeat="view in pageOptions" value="{{view}}">{{view}} </option>
@@ -196,7 +196,7 @@
 
 
 
-                    <div ng-if="reviewData.length" style="position:fixed;bottom:0px;padding: 2rem;background:#fff;left:60%" >
+                    <div ng-if="reviewData.length" style="position:fixed;bottom:0px;padding: 2rem 3rem;background:#fff;left:60%" >
                       <span>
                         <select ng-model="pageOptionsSelected.value" ng-change="setItemsPerPage(pageOptionsSelected.value)">
                           <option ng-repeat="view in pageOptions" value="{{view}}">{{view}} </option>
