--- a/PIM/static/ngTemplates/app.home.dashboard.html
+++ b/PIM/static/ngTemplates/app.home.dashboard.html
@@ -69,8 +69,8 @@
     </div>
 
     <div class="row container-fluid" style="margin-top:20px;">
-      <div class="col-md-4">
-        <div class="container-fluid" style="background-color:#fff;box-shadow:0px 1px .5px var(--themeMain)">
+      <!-- <div class="col-md-4">
+        <div class="container-fluid" style="background-color:#fff;box-shadow:0px 1px .5px grey">
               <div class="row" style="background-color:#f6f6f6;padding:5px 10px;font-size:15px">
                 <p style="display:inline-block"># Of Missed Chats &nbsp; <i class="fa fa-info-circle" style="color:#4a4641"></i></p>
                 <p style="display:inline-block;float:right"><i class="fa fa-arrow-{{changeInMissedChat.increase?'up':'down'}}" style="color:{{changeInMissedChat.increase? 'green':'red'}}"></i> &nbsp;{{changeInMissedChat.percentage.toFixed(2)}}%</p>
@@ -80,11 +80,48 @@
                 <p>{{missedChats}}</p>
               </div>
         </div>
+      </div> -->
+
+      <div class="col-md-4">
+        <div style="position:absolute;top:10%;left:10%;font-size:150%">
+          <h3>{{missedChats}}</h3>
+          <h5>Missed Chats</h5>
+        </div>
+        <div style="position:absolute;top:10%;right:10%;font-size:150%">
+          <p style="display:inline-block;float:right"><i class="fa fa-arrow-{{changeInMissedChat.increase?'up':'down'}}" style="color:{{changeInMissedChat.increase? 'green':'red'}}"></i> &nbsp;{{changeInMissedChat.percentage.toFixed(2)}}%</p>
+
+        </div>
+        <svg width="100%" height="250" style="background:#1ab394">
+          <!-- <g>
+            <path d="M0,48.07191245440336Q183.08333333333334,12.028834462393654,211.25,8.989056800416932C253.5,4.4293903074518495,380.25,-0.7816571130796826,422.5,2.4752475247525183S591.5,36.99843668577386,633.75,41.558103178738946Q661.9166666666666,44.59788084071567,845,48.07191245440336L845,197.88952579468474Q661.9166666666666,189.63870071217647,633.75,184.86190724335592C591.5,177.69671704012507,464.75,135.68264721208965,422.5,126.23762376237626S253.5,91.06305367378843,211.25,90.411672746222Q183.08333333333334,89.97741879451104,0,119.72381448671186Z" class="area" fill="#eeeeee"></path>
+            <path d="M0,48.07191245440336Q183.08333333333334,12.028834462393654,211.25,8.989056800416932C253.5,4.4293903074518495,380.25,-0.7816571130796826,422.5,2.4752475247525183S591.5,36.99843668577386,633.75,41.558103178738946Q661.9166666666666,44.59788084071567,845,48.07191245440336" class="line" fill="none" stroke="#d7d7d7" stroke-width="2"></path>
+          </g> -->
+          <g>
+            <path d="M0,319.72381448671186Q183.08333333333334,89.97741879451104,211.25,90.411672746222C253.5,91.06305367378843,380.25,116.79260031266287,422.5,126.23762376237626S591.5,177.69671704012507,633.75,184.86190724335592Q661.9166666666666,189.63870071217647,845,197.88952579468474L845,250Q661.9166666666666,250,633.75,250C591.5,250,464.75,250,422.5,250S253.5,250,211.25,250Q183.08333333333334,250,0,250Z" class="area" fill="#0d8169"></path><path d="M0,319.72381448671186Q183.08333333333334,89.97741879451104,211.25,90.411672746222C253.5,91.06305367378843,380.25,116.79260031266287,422.5,126.23762376237626S591.5,177.69671704012507,633.75,184.86190724335592Q661.9166666666666,189.63870071217647,845,197.88952579468474" class="line" fill="none" stroke="#0d8169" stroke-width="2"></path>
+          </g>
+        </svg>
       </div>
 
 
       <div class="col-md-4">
-        <div class="container-fluid" style="background-color:#fff;box-shadow:0px 1px .5px var(--themeMain)">
+        <div style="position:absolute;top:10%;right:5%;text-align:center">
+          <p>Average Chat Duration</p>
+          <h4>{{avgChatDuration.toFixed(2)}} Min</h4>
+          <p style="display:inline-block;"><i class="fa fa-arrow-{{changeInAvgChatDur.increase?'up':'down'}}" style="color:{{changeInAvgChatDur.increase? 'green':'red'}}"></i> &nbsp;{{changeInAvgChatDur.percentage.toFixed(2)}}%</p>
+        </div>
+        <svg width="100%" height="250" style="background:#eee">
+          <g>
+            <path d="M0,19.72381448671186Q183.08333333333334,89.97741879451104,211.25,90.411672746222C253.5,91.06305367378843,380.25,116.79260031266287,422.5,126.23762376237626S591.5,177.69671704012507,633.75,184.86190724335592Q661.9166666666666,189.63870071217647,845,197.88952579468474L845,250Q661.9166666666666,250,633.75,250C591.5,250,464.75,250,422.5,250S253.5,250,211.25,250Q183.08333333333334,250,0,250Z" class="area" fill="#f8ac59"></path>
+            <!-- <path d="M0,319.72381448671186Q183.08333333333334,89.97741879451104,211.25,90.411672746222C253.5,91.06305367378843,380.25,116.79260031266287,422.5,126.23762376237626S591.5,177.69671704012507,633.75,184.86190724335592Q661.9166666666666,189.63870071217647,845,197.88952579468474" class="line" fill="none" stroke="#f8ac59" stroke-width="2"></path> -->
+          </g>
+        </svg>
+      </div>
+
+
+
+
+      <!-- <div class="col-md-4">
+        <div class="container-fluid" style="background-color:#fff;box-shadow:0px 1px .5px grey
             <div class="row" style="background-color:#f6f6f6;padding:5px 10px;font-size:15px">
                 <p style="display:inline-block">Average Chat Duration &nbsp; <i class="fa fa-info-circle" style="color:#4a4641"></i></p>
                 <p style="display:inline-block;float:right"><i class="fa fa-arrow-{{changeInAvgChatDur.increase?'up':'down'}}" style="color:{{changeInAvgChatDur.increase? 'green':'red'}}"></i> &nbsp;{{changeInAvgChatDur.percentage.toFixed(2)}}%</p>
@@ -93,19 +130,32 @@
               <p>{{avgChatDuration.toFixed(2)}} Min</p>
             </div>
         </div>
-      </div>
+      </div> -->
 
-      <div class="col-md-4">
-        <div class="container-fluid" style="background-color:#fff;box-shadow:0px 1px .5px var(--themeMain)">
+      <!-- <div class="col-md-4">
+        <div class="container-fluid" style="background-color:#fff;box-shadow:0px 1px .5px grey">
           <div class="row" style="background-color:#f6f6f6;padding:5px 10px;font-size:15px">
             <p style="display:inline-block">Average Rating &nbsp; <i class="fa fa-info-circle" style="color:#4a4641"></i></p>
-            <!-- <p style="display:inline-block;float:right"><i class="fa fa-sort-asc fa-lg" style="color:#bcd46e"></i> &nbsp;2.94%</p> -->
           <p style="display:inline-block;float:right"><i class="fa fa-arrow-{{changeInAverageRating.increase?'up':'down'}}" style="color:{{changeInAverageRating.increase? 'green':'red'}}"></i> &nbsp;{{changeInAverageRating.percentage.toFixed(2)}}%</p>
           </div>
           <div class="col-md-12" style="text-align:center;font-size:23px;font-weight:400;opacity:0.8">
             <p>{{avgRatingAll.toFixed(2)}}</p>
           </div>
         </div>
+      </div> -->
+
+      <div class="col-md-4">
+        <div style="position:absolute;top:10%;right:5%;text-align:center">
+          <p>Average Rating</p>
+          <h4>{{avgRatingAll.toFixed(2)}}</h4>
+        <p style="display:inline-block;"><i class="fa fa-arrow-{{changeInAverageRating.increase?'up':'down'}}" style="color:{{changeInAverageRating.increase? 'green':'red'}}"></i> &nbsp;{{changeInAverageRating.percentage.toFixed(2)}}%</p>
+        </div>
+        <svg width="100%" height="250" style="background:#eee">
+          <g>
+            <path d="M0,19.72381448671186Q183.08333333333334,89.97741879451104,211.25,90.411672746222C253.5,91.06305367378843,380.25,116.79260031266287,422.5,126.23762376237626S591.5,177.69671704012507,633.75,184.86190724335592Q661.9166666666666,189.63870071217647,845,197.88952579468474L845,250Q661.9166666666666,250,633.75,250C591.5,250,464.75,250,422.5,250S253.5,250,211.25,250Q183.08333333333334,250,0,250Z" class="area" fill="#f8ac59"></path>
+            <!-- <path d="M0,319.72381448671186Q183.08333333333334,89.97741879451104,211.25,90.411672746222C253.5,91.06305367378843,380.25,116.79260031266287,422.5,126.23762376237626S591.5,177.69671704012507,633.75,184.86190724335592Q661.9166666666666,189.63870071217647,845,197.88952579468474" class="line" fill="none" stroke="#f8ac59" stroke-width="2"></path> -->
+          </g>
+        </svg>
       </div>
 
 
@@ -116,6 +166,59 @@
         <h3>Satisfaction <span>Past 7 Days</span></h3>
       </div>
     </div> -->
+    <div class="col-sm-3">
+      <div style="background-color:green">
+            <div class="row vertical-align">
+                <div class="col-xs-3">
+                    <i class="fa fa-user fa-3x" style="padding:18px;"></i>
+                </div>
+                <div class="col-xs-9" style="padding:14px">
+                  <p style="font-size:14px">Average respones time</p>
+                    <h2 class="font-bold" style="font-size:25px;margin:0px">217</h2>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-3">
+      <div style="background-color:green">
+            <div class="row vertical-align">
+                <div class="col-xs-3">
+                    <i class="fa fa-user fa-3x" style="padding:18px;"></i>
+                </div>
+                <div class="col-xs-9" style="padding:14px">
+                  <p style="font-size:14px">Average respones time</p>
+                    <h2 class="font-bold" style="font-size:25px;margin:0px">217</h2>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-3">
+      <div style="background-color:green">
+            <div class="row vertical-align">
+                <div class="col-xs-3">
+                    <i class="fa fa-user fa-3x" style="padding:18px;"></i>
+                </div>
+                <div class="col-xs-9" style="padding:14px">
+                  <p style="font-size:14px">Average respones time</p>
+                    <h2 class="font-bold" style="font-size:25px;margin:0px">217</h2>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-sm-3">
+      <div style="background-color:green">
+            <div class="row vertical-align">
+                <div class="col-xs-3">
+                    <i class="fa fa-user fa-3x" style="padding:18px;"></i>
+                </div>
+                <div class="col-xs-9" style="padding:14px">
+                  <p style="font-size:14px">Average respones time</p>
+                    <h2 class="font-bold" style="font-size:25px;margin:0px">217</h2>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="">
       <div class=" col-md-6">
         <div class="col-md-12" style="background-color:#fff;margin-top:20px;box-shadow:0px 1px .5px var(--themeMain)">
