--- a/support/static/ngTemplates/app.projects.archieve.explore.html
+++ b/support/static/ngTemplates/app.projects.archieve.explore.html
@@ -154,10 +154,18 @@
         </div>
         <div class="row" style="padding-top:10px">
           <div class="col-md-5 text-center">
-            <label> INCO Terms : </label>
+            <label> INCO Terms (Quotation) : </label>
           </div>
           <div class="col-md-7 text-center">
             <span> {{form.terms}}</span>
+          </div>
+        </div>
+        <div class="row" style="padding-top:10px">
+          <div class="col-md-5 text-center">
+            <label> INCO Terms (PO): </label>
+          </div>
+          <div class="col-md-7 text-center">
+            <span> {{form.termspo}}</span>
           </div>
         </div>
         <div class="row" style="padding-top:10px">
