--- a/LMS/static/ngTemplates/app.LMs.course.announcement.form.html
+++ b/LMS/static/ngTemplates/app.LMs.course.announcement.form.html
@@ -41,10 +41,6 @@
 
   <div class="container-fluid" ng-if="form.typ == 'general'">
     <div class="form-group">
-      <label> Announcer</label>
-      <input class="form-control" type="text" ng-model="form.announcer" uib-typeahead="user as getUserName(user) for user in userSearch($viewValue)" placeholder="Search and select a Announcer">
-    </div>
-    <div class="form-group">
       <label>Notification Type</label>
       <select ng-model="form.notificationType" class="form-control">
         <option value="sms">SMS</option>
@@ -59,11 +55,7 @@
   </div>
 
 
-  <div class="container-fluid" ng-if="form.typ == 'quiz'">
-    <div class="form-group">
-      <label> Announcer</label>
-      <input class="form-control" type="text" ng-model="form.announcer" uib-typeahead="user as getUserName(user) for user in userSearch($viewValue)" placeholder="Search and select a Announcer">
-    </div>
+  <div class="container-fluid" ng-if="form.typ != 'general'">
     <div class="form-group">
       <label>Notification Type</label>
       <select ng-model="form.notificationType" class="form-control">
@@ -76,100 +68,52 @@
       <label>Notification Message </label>
       <textarea type="text" class="form-control" rows="5" ng-model="form.messageTxt" placeholder="" style="resize:none;"></textarea>
     </div>
-    <div class="form-group">
-      <label> Paper</label>
-      <input type="text" value="" class="form-control" ng-model="form.paper">
-    </div>
+    <div ng-if="form.typ == 'quiz'">
+      <div class="form-group">
+        <label> Paper</label>
+        <input type="text" value="" class="form-control" ng-model="form.paper" uib-typeahead="paper as getPaper(paper) for paper in paperSearch($viewValue)">
+      </div>
 
-    <div class="form-group">
-      <label class="control-label col-sm-2" style="margin-top:35px;padding:0px;">Paper Duedate</label>
-      <div class="col-md-4">
-        <div class="input-group" style="margin-top:35px;">
-          <input type="text" class="form-control" show-weeks="false" uib-datepicker-popup="dd-MMMM-yyyy" ng-model="form.paperDueDate" is-open="status.opened" />
-          <span class="input-group-btn">
-            <button type="button" class="btn btn-default" ng-click="status.opened = true;"><i class="glyphicon glyphicon-calendar"></i></button>
-          </span>
+      <div class="form-group">
+        <label class="control-label col-sm-2" style="margin-top:35px;padding:0px;">Paper Duedate</label>
+        <div class="col-md-4">
+          <div class="input-group" style="margin-top:35px;">
+            <input type="text" class="form-control" show-weeks="false" uib-datepicker-popup="dd-MMMM-yyyy" ng-model="form.paperDueDate" is-open="status.opened" />
+            <span class="input-group-btn">
+              <button type="button" class="btn btn-default" ng-click="status.opened = true;"><i class="glyphicon glyphicon-calendar"></i></button>
+            </span>
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <div class="container-fluid" ng-if="form.typ == 'onlineclass'">
-    <div class="form-group">
-      <label> Announcer</label>
-      <input class="form-control" type="text" ng-model="form.announcer" uib-typeahead="user as getUserName(user) for user in userSearch($viewValue)" placeholder="Search and select a Announcer">
-    </div>
-    <div class="form-group">
-      <label>Notification Type</label>
-      <select ng-model="form.notificationType" class="form-control">
-        <option value="sms">SMS</option>
-        <option value="email">Email</option>
-        <option value="sms&email">SMS & Email</option>
-      </select>
-    </div>
-    <div class="form-group">
-      <label>Notification Message </label>
-      <textarea type="text" class="form-control" rows="5" ng-model="form.messageTxt" placeholder="" style="resize:none;"></textarea>
-    </div>
-    <div class="form-group">
-      <label> Meeting ID</label>
-      <input type="text" value="" class="form-control" ng-model="form.meetId">
+    <div ng-if="form.typ == 'onlineclass'">
+      <div class="form-group">
+        <label> Meeting ID</label>
+        <input type="text" value="" class="form-control" ng-model="form.meetId">
+      </div>
     </div>
 
-  </div>
-
-  <div class="container-fluid" ng-if="form.typ == 'class'">
-    <div class="form-group">
-      <label> Announcer</label>
-      <input class="form-control" type="text" ng-model="form.announcer" uib-typeahead="user as getUserName(user) for user in userSearch($viewValue)" placeholder="Search and select a Announcer">
-    </div>
-    <div class="form-group">
-      <label>Notification Type</label>
-      <select ng-model="form.notificationType" class="form-control">
-        <option value="sms">SMS</option>
-        <option value="email">Email</option>
-        <option value="sms&email">SMS & Email</option>
-      </select>
-    </div>
-    <div class="form-group">
-      <label>Notification Message </label>
-      <textarea type="text" class="form-control" rows="5" ng-model="form.messageTxt" placeholder="" style="resize:none;"></textarea>
-    </div>
-    <div class="form-group">
-      <label>Time</label>
-      <uib-timepicker ng-model="classTime" hour-step="1" minute-step="1" show-meridian="true"></uib-timepicker>
-    </div>
-    <div class="form-group">
-      <label>Venue</label>
-      <textarea type="text" class="form-control" rows="2" ng-model="form.classVenue" placeholder="Enter a Venue for class" style="resize:none;"></textarea>
+    <div ng-if="form.typ == 'class'">
+      <div class="form-group">
+        <label>Time</label>
+        <uib-timepicker ng-model="classTime" hour-step="1" minute-step="1" show-meridian="true"></uib-timepicker>
+      </div>
+      <div class="form-group">
+        <label>Venue</label>
+        <textarea type="text" class="form-control" rows="2" ng-model="form.classVenue" placeholder="Enter a Venue for class" style="resize:none;"></textarea>
+      </div>
     </div>
 
-  </div>
-
-  <div class="container-fluid" ng-if="form.typ == 'offlinequiz'">
-    <div class="form-group">
-      <label> Announcer</label>
-      <input class="form-control" type="text" ng-model="form.announcer" uib-typeahead="user as getUserName(user) for user in userSearch($viewValue)" placeholder="Search and select a Announcer">
-    </div>
-    <div class="form-group">
-      <label>Notification Type</label>
-      <select ng-model="form.notificationType" class="form-control">
-        <option value="sms">SMS</option>
-        <option value="email">Email</option>
-        <option value="sms&email">SMS & Email</option>
-      </select>
-    </div>
-    <div class="form-group">
-      <label>Notification Message </label>
-      <textarea type="text" class="form-control" rows="5" ng-model="form.messageTxt" placeholder="" style="resize:none;"></textarea>
-    </div>
-    <div class="form-group">
-      <label> Time</label>
-      <uib-timepicker ng-model="quizTime" hour-step="1" minute-step="1" show-meridian="true"></uib-timepicker>
-    </div>
-    <div class="form-group">
-      <label>Venue</label>
-    <textarea type="text" class="form-control" rows="2" ng-model="form.quizVenue" placeholder="Enter a venue for Quiz" style="resize:none;"></textarea>
+    <div ng-if="form.typ == 'offlinequiz'">
+      <div class="form-group">
+        <label> Time</label>
+        <uib-timepicker ng-model="quizTime" hour-step="1" minute-step="1" show-meridian="true"></uib-timepicker>
+      </div>
+      <div class="form-group">
+        <label>Venue</label>
+        <textarea type="text" class="form-control" rows="2" ng-model="form.quizVenue" placeholder="Enter a venue for Quiz" style="resize:none;"></textarea>
+      </div>
     </div>
 
   </div>
