--- a/LMS/static/ngTemplates/app.LMS.courses.explore.html
+++ b/LMS/static/ngTemplates/app.LMS.courses.explore.html
@@ -53,7 +53,7 @@
       <div class="col-md-8">
         <div style="margin-bottom:10px;" class="row" ng-repeat="ta in course.TAs">
           <div class="col-md-4">
-            <img ng-src="{{ta }}" style="height:55px;width:55px;" class="img img-rounded">
+            <img ng-src="{{ta}}" style="height:55px;width:55px;" class="img img-rounded">
           </div>
           <div class="col-md-8">
             {{ta | getName}}
@@ -78,7 +78,7 @@
       <div class="col-md-3 col-sm-6 col-xs-12" ng-repeat="enrollment in course.enrollments">
         <span class="info-box-icon" style="background-color:white;">
           <div class="row">
-            <img style="width: 50%;" class="img" ng-src="{{enrollment.user}}">
+            <img style="width: 50%;" class="img" ng-src="{{enrollment.user | getDp}}">
           </div>
           <div class="row {{$index | rainbow}}" style="background:white;height:40px; margin-bottom:10px;">
             <span style="color:black;font-size:12px;color:white; top:-25px;position:relative;">{{enrollment.user | getName}}</span>
@@ -119,7 +119,7 @@
     </div>
 
   </div>
-  <div class="col-md-9">
+  <div class="col-md-9"style="padding:0px;">
 
     <tabs-Strip tabs="tabs" active="activeTab"></tabs-Strip>
 
@@ -146,7 +146,7 @@
     <hr>
     <div class="row">
       <div class="container-fluid" ng-if="activeTab == 3">
-        <center><button type="button" class="btn btn-primary btn-md" ng-click="open()">ADD <i class="fa fa-plus"></i></button></center>
+        <center><button type="button" class="btn btn-primary btn-md" ng-click="homework()">ADD <i class="fa fa-plus"></i></button></center>
       </div>
     </div>
 
@@ -161,7 +161,28 @@
         <center><button type="button" class="btn btn-primary btn-md" ng-click="addNotes()">Add Notes <i class="fa fa-plus"></i></button></center>
       </div>
     </div>
+    <div class="container-fluid">
+      <div class="col-md-3" ng-repeat="h in homwrkData" style="margin-bottom:10px;">
+        <div class="container-fluid card" style="padding-left:0px;padding-right:0px">
+          <div class="col-md-5">
+            <h5> <span> <strong>Paper :</strong> </span> </h5>
+          </div>
+          <div class="col-md-7">
+            <h5>{{h.paper.name}}</h5>
+          </div>
+          <div class="col-md-5">
+            <h5> <span> <strong>Comment :</strong> </span> </h5>
+          </div>
+          <div class="col-md-7">
+            <h5>{{h.comment}}</h5>
+          </div>
+          <div class="text-right"style="padding-right:10px;">
+            <a href="{{h.pdf}}"><i class="fa fa-file fa-fw" aria-hidden="true"></i> View file</a>
+          </div>
 
+        </div>
+      </div>
+    </div>
     <div class="container-fluid" style="padding-top:15px;">
       <div class="col-md-3" ng-repeat="n in noteData" style="margin-bottom:10px;">
         <div class="container-fluid card">
@@ -183,9 +204,9 @@
       </div>
     </div>
 
-    <div class="container-fluid">
+    <div class="container-fluid"style="padding-left:10px;padding-right:10px;">
       <div class="col-md-3" ng-repeat="a in announcements" style="margin-bottom:10px;">
-        <div class="container-fluid card" style="min-height:160px;padding-top:8px;">
+        <div class="container-fluid card" style="min-height:180px;padding-top:8px;">
           <div class="text-center">
             <span style="text-transform: uppercase;color:#1d5fcf"> <strong>{{a.typ}}</strong> </span>
           </div>
@@ -194,14 +215,14 @@
             <span><strong>Announcer : </strong> </span> <span> {{a.announcer | getName}}</span>
           </div>
           <div>
-            <span><strong>Notification Type : </strong> </span> <span> {{a.notification}}</span>
+            <span><strong>Notification Type : </strong> </span> <span style="text-transform: capitalize;"> {{a.notification}}</span>
           </div>
-          <div ng-if="a.typ === 'class' || a.typ ===  'offlinequiz'">
-            <!-- <span><strong>Date : </strong> </span> <span> {{a.time | date}}</span> -->
+          <div ng-if="a.typ != 'general'">
+            <span><strong>Date : </strong> </span> <span> {{a.date | date}}</span> &nbsp;| &nbsp;
             <span><strong>Time : </strong> </span> <span> {{a.time | date : "h.mm a"}}</span>
           </div>
           <div ng-if="a.venue!= null">
-            <span><strong>Venue : </strong> </span> <span> {{a.venue}}</span>
+            <span><strong>Venue : </strong> </span> <span style="text-transform: capitalize;"> {{a.venue}}</span>
           </div>
           <div ng-if="a.paper!= null">
             <span><strong>Paper : </strong> </span> <span> {{a.paper.name}}</span>
