--- a/LMS/static/ngTemplates/app.LMs.course.announcement.form.html
+++ b/LMS/static/ngTemplates/app.LMs.course.announcement.form.html
@@ -75,13 +75,21 @@
       </div>
 
       <div class="form-group">
-        <label class="control-label col-sm-2" style="margin-top:35px;padding:0px;">Paper Duedate</label>
         <div class="col-md-4">
-          <div class="input-group" style="margin-top:35px;">
-            <input type="text" class="form-control" show-weeks="false" uib-datepicker-popup="dd-MMMM-yyyy" ng-model="form.paperDueDate" is-open="status.opened" />
-            <span class="input-group-btn">
-              <button type="button" class="btn btn-default" ng-click="status.opened = true;"><i class="glyphicon glyphicon-calendar"></i></button>
-            </span>
+          <div class="form-group">
+            <label>Time</label>
+            <uib-timepicker ng-model="form.time" hour-step="1" minute-step="1" show-meridian="true"></uib-timepicker>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="form-group">
+            <label>Paper Duedate</label>
+            <div class="input-group" style="margin-top:33px;">
+              <input type="text" class="form-control" show-weeks="false" uib-datepicker-popup="dd-MMMM-yyyy" ng-model="form.paperDueDate" is-open="status.opened" />
+              <span class="input-group-btn">
+                <button type="button" class="btn btn-default" ng-click="status.opened = true;"><i class="glyphicon glyphicon-calendar"></i></button>
+              </span>
+            </div>
           </div>
         </div>
       </div>
@@ -92,29 +100,80 @@
         <label> Meeting ID</label>
         <input type="text" value="" class="form-control" ng-model="form.meetId">
       </div>
+      <div class="form-group">
+        <div class="col-md-4">
+          <div class="form-group">
+            <label>Time</label>
+            <uib-timepicker ng-model="form.time" hour-step="1" minute-step="1" show-meridian="true"></uib-timepicker>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="form-group">
+            <label>Date</label>
+            <div class="input-group" style="margin-top:33px;">
+              <input type="text" class="form-control" show-weeks="false" uib-datepicker-popup="dd-MMMM-yyyy" ng-model="form.date" is-open="status.opened" />
+              <span class="input-group-btn">
+                <button type="button" class="btn btn-default" ng-click="status.opened = true;"><i class="glyphicon glyphicon-calendar"></i></button>
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <div ng-if="form.typ == 'class'">
       <div class="form-group">
-        <label>Time</label>
-        <uib-timepicker ng-model="classTime" hour-step="1" minute-step="1" show-meridian="true"></uib-timepicker>
-      </div>
-      <div class="form-group">
         <label>Venue</label>
         <textarea type="text" class="form-control" rows="2" ng-model="form.classVenue" placeholder="Enter a Venue for class" style="resize:none;"></textarea>
+      </div>
+
+      <div class="form-group">
+        <div class="col-md-4">
+          <div class="form-group">
+            <label>Time</label>
+            <uib-timepicker ng-model="form.classTime" hour-step="1" minute-step="1" show-meridian="true"></uib-timepicker>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="form-group">
+            <label>Date</label>
+            <div class="input-group" style="margin-top:33px;">
+              <input type="text" class="form-control" show-weeks="false" uib-datepicker-popup="dd-MMMM-yyyy" ng-model="form.classDate" is-open="status.opened" />
+              <span class="input-group-btn">
+                <button type="button" class="btn btn-default" ng-click="status.opened = true;"><i class="glyphicon glyphicon-calendar"></i></button>
+              </span>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
     <div ng-if="form.typ == 'offlinequiz'">
       <div class="form-group">
-        <label> Time</label>
-        <uib-timepicker ng-model="quizTime" hour-step="1" minute-step="1" show-meridian="true"></uib-timepicker>
-      </div>
-      <div class="form-group">
         <label>Venue</label>
         <textarea type="text" class="form-control" rows="2" ng-model="form.quizVenue" placeholder="Enter a venue for Quiz" style="resize:none;"></textarea>
       </div>
+      <div class="form-group">
+        <div class="col-md-4">
+          <div class="form-group">
+            <label>Time</label>
+            <uib-timepicker ng-model="form.quizTime" hour-step="1" minute-step="1" show-meridian="true"></uib-timepicker>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="form-group">
+            <label>Date</label>
+            <div class="input-group" style="margin-top:33px;">
+              <input type="text" class="form-control" show-weeks="false" uib-datepicker-popup="dd-MMMM-yyyy" ng-model="form.quizDate" is-open="status.opened" />
+              <span class="input-group-btn">
+                <button type="button" class="btn btn-default" ng-click="status.opened = true;"><i class="glyphicon glyphicon-calendar"></i></button>
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+
 
   </div>
 
