--- a/support/static/ngTemplates/app.qualityCheck.html
+++ b/support/static/ngTemplates/app.qualityCheck.html
@@ -57,7 +57,7 @@
                                      <span ng-if="data.status=='resolved'&&data.user_id" style="color:#FF8C00"><b>{{data.status|humanize}}</b></span>
                                      <span ng-if="!data.user_id" style="color:#F90000"><b>Missed</b></span>
                                   </div>
-                                  <div ng-if="data.chatDuration>0.0">
+                                  <div>
                                     <span ng-if="data.customerRating<=3&&data.customerRating" style="font-size:80%;margin-right:1rem;padding: .1rem 1rem;color:red">{{data.customerRating}}
                                     <i class="fa fa-star fa-md" aria-hidden="true"></i>
                                    </span>
@@ -133,14 +133,12 @@
                                   <option ng-repeat="chatType in chatTypes" value="{{chatType}}">{{chatType}}</option>
                                 </select>
                             </div>
-
                            <div class="form-group login-input-group" style="margin-top:20px">
                             <label>Sort By:</label>
                             <select class="form-control" ng-model="selectedSortOption.value" style="border:none">
                               <option ng-repeat="sort in sortOptions" value="{{sort}}">{{sort}} </option>
                             </select>
                           </div>
-
                           <div class="btn-group-vertical">
                             <button type="button" class="btn btn-primary" ng-click="filterData()">
                               <strong>Filter</strong>
@@ -148,7 +146,6 @@
                          </div>
                         </div>
                       </div>
-
                 </div>
 
 
