--- a/support/static/ngTemplates/app.invoice.html
+++ b/support/static/ngTemplates/app.invoice.html
@@ -1,25 +1,36 @@
 <div class="shaddowed card bg-white" style="min-height:95vh;">
-  <breadcrumb></breadcrumb>
-  <div class="container-fluid">
-    <div class="container-fluid">
-      <uib-tabset>
-        <uib-tab active="searchTabActive.active">
-          <uib-tab-heading>
-            New <i class="fa fa-plus"></i>
-          </uib-tab-heading>
-          <div style="margin-top:20px;" ng-include="'/static/ngTemplates/app.invoice.form.html'">
-          </div>
-        </uib-tab>
-        <uib-tab>
-          <uib-tab-heading>
-            Browse
-            <i class="fa fa-archive"></i>
-          </uib-tab-heading>
-          <div class="container-fluid">
-            <generic-Table data="data.archieveData" config-Obj="{{archieveConfig}}" callback-Fn="tableActionArchieve"></generic-Table>
-          </div>
-        </uib-tab>
-      </uib-tabset>
-    </div>
-  </div>
+
+<breadcrumb></breadcrumb>
+<div class="container-fluid">
+  <uib-tabset>
+    <uib-tab>
+      <uib-tab-heading>
+        New <i class="fa fa-plus"></i>
+      </uib-tab-heading>
+      <div style="margin-top:20px;" ng-include="'/static/ngTemplates/app.invoice.form.html'">
+      </div>
+    </uib-tab>
+    <uib-tab active="searchTabActive">
+      <uib-tab-heading>
+        Browse
+        <i class="fa fa-list-ul"></i>
+      </uib-tab-heading>
+      <div class="container-fluid">
+        <generic-Table data="data.tableData" config-Obj="{{config}}" callback-Fn="tableAction"></generic-Table>
+      </div>
+    </uib-tab>
+    <uib-tab ng-repeat="tab in tabs" active="tab.active" disable="tab.disabled">
+      <uib-tab-heading>
+        {{tab.title}}
+        <i ng-if="tab.cancel" class="fa fa-close" ng-click="closeTab($index);"></i>
+      </uib-tab-heading>
+      <div ng-if="tab.app == 'invoiceEditor'">
+        <div ng-include="'/static/ngTemplates/app.invoice.form.html'"></div>
+      </div>
+      <div ng-if="tab.app == 'invoiceExplore'">
+        <div ng-include="'/static/ngTemplates/app.invoice.explore.html'"></div>
+      </div>
+    </uib-tab>
+  </uib-tabset>
+</div>
 </div>
