--- a/homepage/static/ngTemplates/app.homepage.testimonials.html
+++ b/homepage/static/ngTemplates/app.homepage.testimonials.html
@@ -102,6 +102,29 @@
           </div>
         </div>
       </div>
+      <div class="col-md-6" style="position: relative;">
+        <div class="movie-card">
+          <div class="col-md-5 studentcard" style="min-height:300px;">
+            <img src="/static/images/24tut/student3.png"  class="imgstyle" />
+          </div>
+          <div class="circle">
+            <div><b>83%</b></div>
+          </div>
+          <div class="colorcircle" ng-style="myObjcolor">
+          </div>
+          <div class="col-md-7 text-left">
+            <div style="margin-top:3em;">
+              <span style="font-size:18px;color:#5B5B5B;">Successfully Completed Grade 3 science & Technology Classes</span>
+            </div>
+            <div class="stucardtext">
+              <span style="font-size:18px;"><b>Laren Ralpha</b></span>
+            </div>
+            <div style="padding-bottom: 20px;">
+              <span style="font-size:15px;color:#5B5B5B;padding-bottom: 20px;">Scientology Student - Europe</span>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="row" style="margin-top:2em;">
       <div class="col-md-6" style="position: relative;">
