--- a/support/static/ngTemplates/app.invoice.form.html
+++ b/support/static/ngTemplates/app.invoice.form.html
@@ -147,7 +147,7 @@
               <td >{{v.igstVal}}</td>
               <td >{{v.total}}</td>
               <td>
-              <button type="button" class="btn btn-danger btn-sm" ng-click="delete($index)"> <i class="fa fa-trash"></i> </button>
+              <button type="button" class="btn btn-danger btn-sm" ng-click="deleteData(v.pk , $index)"> <i class="fa fa-trash"></i> </button>
             </td>
             </tr>
             <tr >
