--- a/support/static/ngTemplates/app.invoice.form.html
+++ b/support/static/ngTemplates/app.invoice.form.html
@@ -85,7 +85,7 @@
               </div>
               <div class="col-md-4 form-group">
                 <label>Code</label>
-                <input ng-model="form.billCode" type="text" class="form-control">
+                <input ng-model="form.billCode" type="text" class="form-control" disabled>
               </div>
             </div>
           </div>
@@ -97,7 +97,7 @@
               </div>
               <div class="col-md-4 form-group">
                 <label>Code</label>
-                <input ng-model="form.shipCode" type="text" class="form-control">
+                <input ng-model="form.shipCode" type="text" class="form-control" disabled>
               </div>
             </div>
           </div>
