--- a/homepage/static/ngTemplates/app.homepage.courses.html
+++ b/homepage/static/ngTemplates/app.homepage.courses.html
@@ -300,7 +300,7 @@
                   <table class="table-align">
                     <td class="tablealign1"><span style="text-align: center"><img src="{{a.img2}}" class="img-responsive img-circle" style="height:50px;width:50px;"></span></td>
                     <td class="tablealign2"><b>{{a.name}}</b></td>
-                    <td><span class="badge badge-pills">&#8377;{{a.price}}/hr</span></td>
+                    <td style="cursor:pointer;"><a href="/checkout"class="badge badge-pills">&#8377;{{a.price}}/hr</a></td>
                   </table>
                 </div>
               </div>
