--- a/homepage/static/ngTemplates/app.tutorsHomepage.index.html
+++ b/homepage/static/ngTemplates/app.tutorsHomepage.index.html
@@ -1,4 +1,3 @@
-
 <div class="container-fluid home_header">
   <div class="col-md-4 col-md-offset-1 home_content">
     <h1 style="font-size:4em;font-weight:bold;"> Learn Anything </h1>
@@ -99,9 +98,11 @@
             <div class="col-md-4">
 
             </div>
-            <div class="col-md-3 col-xs-6 pull-right">
-              <span class="badge badge-pills">$15.00/hr</span>
-            </div>
+            <a href="/checkout">
+              <div class="col-md-3 col-xs-6 pull-right">
+                <span class="badge badge-pills">$18.00/hr</span>
+              </div>
+            </a>
           </div>
         </div>
       </div>
@@ -118,7 +119,7 @@
             <i class="fa fa-star starf" aria-hidden="true"></i>
             <i class="fa fa-star starf" aria-hidden="true"></i>
             <i class="fa fa-star starf" aria-hidden="true"></i>
-            <span class="text-muted">(45 Reviews)</span>
+            <span class="text-muted">(35 Reviews)</span>
           </div>
           <div class="row min_padd">
             <div class="col-md-5 col-xs-6">
@@ -127,9 +128,11 @@
             <div class="col-md-4">
 
             </div>
-            <div class="col-md-3 col-xs-6 pull-right">
-              <span class="badge badge-pills">$15.00/hr</span>
-            </div>
+            <a href="/checkout">
+              <div class="col-md-3 col-xs-6 pull-right">
+                <span class="badge badge-pills">$13.00/hr</span>
+              </div>
+            </a>
           </div>
         </div>
       </div>
@@ -146,7 +149,7 @@
             <i class="fa fa-star starf" aria-hidden="true"></i>
             <i class="fa fa-star starf" aria-hidden="true"></i>
             <i class="fa fa-star starf" aria-hidden="true"></i>
-            <span class="text-muted">(45 Reviews)</span>
+            <span class="text-muted">(49 Reviews)</span>
           </div>
           <div class="row min_padd">
             <div class="col-md-5 col-xs-6">
@@ -155,9 +158,11 @@
             <div class="col-md-4">
 
             </div>
-            <div class="col-md-3 col-xs-6 pull-right">
-              <span class="badge badge-pills">$15.00/hr</span>
-            </div>
+            <a href="/checkout">
+              <div class="col-md-3 col-xs-6 pull-right">
+                <span class="badge badge-pills">$15.00/hr</span>
+              </div>
+            </a>
           </div>
         </div>
       </div>
