--- a/support/static/ngTemplates/app.uiSettings.html
+++ b/support/static/ngTemplates/app.uiSettings.html
@@ -156,7 +156,7 @@
                   <div class="row " style="padding-top:25px;">
                     <div class="col-md-8 col-md-offset-2">
                       <div ng-repeat="p in prescripts" style="margin-bottom:15px;">
-                        <div class="card" style="background-color:#5555c2; color:white; padding:15px; border-radius:10px;" ng-mouseover="p.display=true" ng-mouseleave="p.display=false">
+                        <div class="card" style="background-color:var(--headerNavbarHighlight); color:white; padding:15px; border-radius:10px;" ng-mouseover="p.display=true" ng-mouseleave="p.display=false">
                           <div class="row">
                             <div class="col-md-10">
                               <span>{{p.text}}</span>
