--- a/support/static/ngTemplates/app.qualityCheck.html
+++ b/support/static/ngTemplates/app.qualityCheck.html
@@ -50,12 +50,12 @@
                                    <i ng-if="data.typ=='video'" class="fa fa-video-camera fa-md" aria-hidden="true"></i>
                                    <i ng-if="data.typ!='video'&&data.typ!='audio'" class="fa fa-commenting-o fa-md" aria-hidden="true"></i>
                                    <div class="tabel_dataStatus" style="font-size:80%">
-                                     <span ng-if="data.status=='late'&&data.user_id" style="color:green"><b>{{data.status|humanize}}</b></span>
+
                                      <span ng-if="data.status=='started'&&data.user_id" style="color:green"><b>{{data.status|humanize}}</b></span>
                                      <span ng-if="data.status=='closed'&&data.user_id" style="color:#A40B0B"><b>{{data.status|humanize}}</b></span>
                                      <span ng-if="data.status=='reviewed'&&data.user_id" style="color:brown"><b>{{data.status|humanize}}</b></span>
                                      <span ng-if="data.status=='resolved'&&data.user_id" style="color:#FF8C00"><b>{{data.status|humanize}}</b></span>
-                                     <span ng-if="!data.user_id" style="color:#F90000"><b>Missed</b></span>
+                                     <span ng-if="data.status=='missed'" style="color:#F90000"><b>Missed</b></span>
                                   </div>
                                   <div>
                                     <span ng-if="data.customerRating<=3&&data.customerRating" style="font-size:80%;margin-right:1rem;padding: .1rem 1rem;color:red">{{data.customerRating}}
